# save_auv

./: .gitattributes  .gitignore  README.md  add_buoyancy.py  auv_teleop.py  fix_buoyancy_placement.py  setup_step1.py  setup_step2.py
scripts/: brighten_dae_materials.py  gen_cupid_mesh.py  gen_niot_world.py  step_to_colored_dae.FCMacro  step_to_colored_dae_occ.py  step_to_stl.py
src/srmauv_description/: CMakeLists.txt  package.xml
src/srmauv_description/launch/: gazebo.launch.py  niot_mission.launch.py
src/srmauv_description/meshes/: cupid_heart_plate.stl
src/srmauv_description/urdf/: srmauv.urdf.xacro
src/srmauv_description/worlds/: niot_mission.world  srmauv.world
src/srmauv_dynamics/: CMakeLists.txt  package.xml
src/srmauv_dynamics/src/: drag_plugin.cpp  thruster_plugin.cpp
