<?xml version="1.0"?>
<package format="3">
  <name>srmauv_dynamics</name>
  <version>0.1.0</version>
  <description>Hydrodynamic drag and added mass plugin for NIOT SAVe AUV</description>
  <maintainer email="team@srmauv.local">SRM AUV Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
